# taiyaq

./: .env.example  .gitignore  README.md  flake.nix  openapi.json
backend/: Cargo.toml  package.nix
backend/.sqlx/: query-17d1c042454288427543cba238409737f58247bd48fce947f40ce3eb5535d6d5.json  query-238e80934cc4e620aa161c65b2abfec661973f3489824338a7306c46d711b07b.json  query-414947fc93791e1a7e1c535ff16a320ad57e38d677a1df32b02fa13a60f4111d.json  query-42c5c552fa0f43475d68a67d31265af3078ca4f1896ed84b52e0aacfcb455cb1.json  query-45f9e7c602b4ad16dfeed90d103f299a6f85f26431db27842de8ff5684bc5c8e.json  query-619c3cf2c275aa6987c1d50afbbd782c828ffdeab2982b1bf7e20e5bc7d63dd5.json  query-68724bf62be752f59f1500504cacb16716cb6a15da1044e9488e0bddd7e02b47.json  query-70599e225e4de6932b8b69fbd565a22ce4f5e4e6f8352dcffdfa0e6ae1f8ba7a.json  query-708fd56508db017813c50672c31beb2fc5da88328f9fc913cdb6bee5968d37e6.json  query-79227c337aed87862133be7c0fe7dec56a7bdf88f33e6b72e0436313e64d71cd.json  query-846fe6a679fa55c90805b98beb607776e9f7109237840ccf0f8e1ed6d4300e12.json  query-94c1f77f6fa2ad16761506a498417559db4b40bedef9d1d02783b62959729a21.json  query-bcc7dd04856f86a6d860f1b8ee1476824293fc028d23aec192957d0b53eb21bd.json  query-bed0317c590670523a0acc28cda73b7cbac27f9da72594e70cfffd9995b1f854.json  query-e97296ec455e832505739b643739156e81190d6bf6d0d73f43958cdd0b994731.json  query-ecd578821111dfd76f75a25148a0a7e85560c84bd84bd893446b200fa875190e.json  query-ed7c479043b870520ccb146b93b0324e078f829185775d0f44783a7f8686c4ab.json  query-f649005dd9d98b87473674ea7981ea9f7a481e0684102cbd417fafa5148a9cb2.json  query-fe38fe1b1ab3d801a3f065f337a8e56ffdf3a712726b170e0b43d3e7bc2f7a8d.json
backend/migrations/: 0001_initial.sql  0002_notification_delivery_logs.sql
backend/src/: app.rs  config.rs  data.rs  lib.rs  main.rs
backend/src/api/: auth.rs  handler.rs  mod.rs  model.rs  openapi.rs  route.rs
backend/src/discord/: commands.rs  event_handler.rs  mod.rs
backend/src/domain/: mod.rs  notification.rs  order_number.rs  order_status.rs  snapshot.rs  wait_time.rs
backend/src/line/: commands.rs  handler.rs  mod.rs  richmenu.rs
backend/src/port/: line_reply.rs  mod.rs  notification_log.rs  (+2 more)
backend/tests/: api.rs
(+53 files in other folders)
