[package]
default-run = "taiyaq-backend"
edition = "2024"
name = "taiyaq-backend"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
bot_sdk_line = { git = "https://github.com/seichiki/bot_sdk_line.git" }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
enum-map = { version = "2.7.3", features = ["serde"] }
poise = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }

[lib]
name = "taiyaq_backend"
path = "src/lib.rs"

[[bin]]
name = "taiyaq-backend"
path = "src/main.rs"
